--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 name: Tiphanie Dousset
 markdown: kramdown
-permalink: /blog/:year/:month/:day/:title
+permalink: /:categories/:year/:month/:day/:title
 theme: jekyll-theme-cayman
