Add a parent odrner blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Tiphanie Dousset
 markdown: kramdown
-permalink: /:categories/:year/:month/:day/:title
+permalink: /blog/:categories/:year/:month/:day/:title
 theme: jekyll-theme-cayman
 repository: tiph23/blog
